fix(mobile navbar): fixed mobile navbar clipping into hub post page

--- a/client/src/pages/hubpost/HubPost.scss
+++ b/client/src/pages/hubpost/HubPost.scss
@@ -1,9 +1,9 @@
 .hub-post {
-    max-height: calc(100vh - 76px - 65px);
-
-    @media screen and (min-width: 576px) {
-        max-height: calc(100vh - 76px);
-    }
+    //max-height: calc(100vh - 76px - 65px);
+    //
+    //@media screen and (min-width: 576px) {
+    //    max-height: calc(100vh - 76px);
+    //}
 
     height: 100%;
     display: flex;
@@ -27,6 +27,10 @@
         display: flex;
         flex-direction: column;
         flex-grow: 1;
+
+        .ql-container {
+            max-height: 450px;
+        }
     }
 
     .hub-post-btn {
@@ -41,4 +45,6 @@
             font-size: 20px;
         }
     }
+
+
 }
